# F1PandasProject

./: Project1.ipynb  README.md  REPORT.tex  contracts.csv  hello.py  pyproject.toml  report.md
pres/F1Pandas/: package.json  slides-export.pptx  slides.md
